[IMP] Basic unit test was added to the report_groups_implied model
## KNOWN BUGS

- Code tester fails working with non ascii characters.
- Models by groups fails
- Wizard server action don't work

--- a/modules/development_tools/i18n/es.po
+++ b/modules/development_tools/i18n/es.po
@@ -144,7 +144,7 @@ msgstr "Código"
 #. module: development_tools
 #: model:ir.ui.menu,name:development_tools.menu_act_window_code_tests
 msgid "Code tester"
-msgstr "Porbador de código"
+msgstr "Probador de código"
 
 #. module: development_tools
 #: help:dev.code.tester,code:0
